CRUD de licitações, decretos e diários

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-index></app-index>
 
-<router-outlet />
+<app-loading *ngIf="isLoading$ | async"></app-loading>
+
+<app-index></app-index>
+<router-outlet></router-outlet>
